src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__str_bytes.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let text = "hello"
let bytes_list = bytes(text)
let expected = [104, 101, 108, 108, 111]

print(bytes_list)
print(expected)

let len = list_len(bytes_list)
assert_eq(len, list_len(expected))

let i = 0
loop {
  if i == len {
    break
  }

  assert_eq(bytes_list[i], expected[i])

  i += 1
}

let text2 = "a\n\r"
let bytes2 = bytes(text2)
let expected2 = [97, 10, 13]

assert_eq(list_len(bytes2), list_len(expected2))

let i = 0
loop {
  if i == list_len(expected2) {
    break
  }

  assert_eq(bytes2[i], expected2[i])

  i += 1
}
}

OK
Nil

STDOUT
[Int(104), Int(101), Int(108), Int(108), Int(111)]
[Int(104), Int(101), Int(108), Int(108), Int(111)]
