src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__str_lines_empty.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let text = ""
let lines = lines(text)
let expected = []

print(lines)
print(expected)

assert_eq(list_len(lines), list_len(expected))
}

OK
Nil

STDOUT
[]
[]
