src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__str_lines_no_end_newline.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let text = "foo\nbar\n\r\nbaz"
let lines = lines(text)
let expected = ["foo", "bar", "", "baz"]

print(lines)
print(expected)

let len = list_len(lines)
assert_eq(len, list_len(expected))

let i = 0
loop {
  if i == len {
    break
  }

  assert_eq(lines[i], expected[i])

  i += 1
}
}

OK
Nil

STDOUT
["foo", "bar", "", "baz"]
["foo", "bar", "", "baz"]
