src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__str_split_multi_char.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
// Split with multi-character separator
let text = "foo::bar::baz"
let result = split(text, "::")
let expected = ["foo", "bar", "baz"]

print(result)
print(expected)

let len = list_len(result)
assert_eq(len, list_len(expected))

let i = 0
loop {
  if i == len {
    break
  }
  assert_eq(result[i], expected[i])
  i += 1
}
}

OK
Nil

STDOUT
["foo", "bar", "baz"]
["foo", "bar", "baz"]
